test/bad/t1.zls
(*
   This program should be rejected because x is tested before being reset.
   The program is therefore not causual.
 *)

let hybrid main2 z = x where
  rec init x = true
  and automaton
    | S0 ->
        do until z on x then do x = false in S0

  let node g(x) = 
  let rec init y = 0
  and match x with
      | 1 -> let z1 = y + 1 in do y = 1 done
      end in
  y
